--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
 
  
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <script src="https://kit.fontawesome.com/3171d024d8.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
